--- a/Last.fm-Scrubbler-WPF-Test/packages.config
+++ b/Last.fm-Scrubbler-WPF-Test/packages.config
@@ -6,9 +6,9 @@
   <package id="ComposableAsync.Core" version="1.3.0" targetFramework="net461" />
   <package id="DiscogsClient" version="2.7.1" targetFramework="net461" />
   <package id="Inflatable.Lastfm" version="1.2.0" targetFramework="net461" />
-  <package id="Microsoft.NETCore.Platforms" version="5.0.0-rc.2.20475.5" targetFramework="net461" />
+  <package id="Microsoft.NETCore.Platforms" version="5.0.0" targetFramework="net461" />
   <package id="Microsoft.Win32.Primitives" version="4.3.0" targetFramework="net461" />
-  <package id="Moq" version="4.14.7" targetFramework="net461" />
+  <package id="Moq" version="4.15.1" targetFramework="net461" />
   <package id="NETStandard.Library" version="2.0.3" targetFramework="net461" />
   <package id="Newtonsoft.Json" version="12.0.3" targetFramework="net461" />
   <package id="NUnit" version="3.12.0" targetFramework="net461" />
@@ -24,7 +24,7 @@
   <package id="System.Collections.Concurrent" version="4.3.0" targetFramework="net461" />
   <package id="System.Console" version="4.3.1" targetFramework="net461" />
   <package id="System.Diagnostics.Debug" version="4.3.0" targetFramework="net461" />
-  <package id="System.Diagnostics.DiagnosticSource" version="5.0.0-rc.2.20475.5" targetFramework="net461" />
+  <package id="System.Diagnostics.DiagnosticSource" version="5.0.0" targetFramework="net461" />
   <package id="System.Diagnostics.Tools" version="4.3.0" targetFramework="net461" />
   <package id="System.Diagnostics.Tracing" version="4.3.0" targetFramework="net461" />
   <package id="System.Globalization" version="4.3.0" targetFramework="net461" />
@@ -42,13 +42,13 @@
   <package id="System.Net.Sockets" version="4.3.0" targetFramework="net461" />
   <package id="System.Numerics.Vectors" version="4.6.0-preview5.19224.8" targetFramework="net461" />
   <package id="System.ObjectModel" version="4.3.0" targetFramework="net461" />
-  <package id="System.Reactive" version="5.0.0-preview.220" targetFramework="net461" />
+  <package id="System.Reactive" version="5.0.0" targetFramework="net461" />
   <package id="System.Reflection" version="4.3.0" targetFramework="net461" />
   <package id="System.Reflection.Extensions" version="4.3.0" targetFramework="net461" />
   <package id="System.Reflection.Primitives" version="4.3.0" targetFramework="net461" />
   <package id="System.Resources.ResourceManager" version="4.3.0" targetFramework="net461" />
   <package id="System.Runtime" version="4.3.1" targetFramework="net461" />
-  <package id="System.Runtime.CompilerServices.Unsafe" version="5.0.0-rc.2.20475.5" targetFramework="net461" />
+  <package id="System.Runtime.CompilerServices.Unsafe" version="5.0.0" targetFramework="net461" />
   <package id="System.Runtime.Extensions" version="4.3.1" targetFramework="net461" />
   <package id="System.Runtime.Handles" version="4.3.0" targetFramework="net461" />
   <package id="System.Runtime.InteropServices" version="4.3.0" targetFramework="net461" />
