--- a/Last.fm-Scrubbler-WPF/packages.config
+++ b/Last.fm-Scrubbler-WPF/packages.config
@@ -4,7 +4,7 @@
   <package id="Caliburn.Micro.Core" version="4.0.0-alpha.1" targetFramework="net461" />
   <package id="ComposableAsync.Core" version="1.3.0" targetFramework="net461" />
   <package id="DiscogsClient" version="2.7.1" targetFramework="net461" />
-  <package id="DiscordRichPresence" version="1.0.150" targetFramework="net461" />
+  <package id="DiscordRichPresence" version="1.0.166" targetFramework="net461" />
   <package id="Extended.Wpf.Toolkit" version="4.0.1" targetFramework="net461" />
   <package id="Hardcodet.NotifyIcon.Wpf" version="1.0.8" targetFramework="net461" />
   <package id="Inflatable.Lastfm" version="1.2.0" targetFramework="net461" />
@@ -14,7 +14,7 @@
   <package id="Microsoft.CodeQuality.Analyzers" version="3.3.1" targetFramework="net461" developmentDependency="true" />
   <package id="Microsoft.Net.Http" version="2.2.29" targetFramework="net461" />
   <package id="Microsoft.NetCore.Analyzers" version="3.3.1" targetFramework="net461" developmentDependency="true" />
-  <package id="Microsoft.NETCore.Platforms" version="5.0.0-rc.2.20475.5" targetFramework="net461" />
+  <package id="Microsoft.NETCore.Platforms" version="5.0.0" targetFramework="net461" />
   <package id="Microsoft.NetFramework.Analyzers" version="3.3.1" targetFramework="net461" developmentDependency="true" />
   <package id="Microsoft.Win32.Primitives" version="4.3.0" targetFramework="net461" />
   <package id="Microsoft.Xaml.Behaviors.Wpf" version="1.1.19" targetFramework="net461" />
@@ -53,13 +53,13 @@
   <package id="System.Net.Primitives" version="4.3.1" targetFramework="net461" />
   <package id="System.Net.Sockets" version="4.3.0" targetFramework="net461" />
   <package id="System.ObjectModel" version="4.3.0" targetFramework="net461" />
-  <package id="System.Reactive" version="5.0.0-preview.220" targetFramework="net461" />
+  <package id="System.Reactive" version="5.0.0" targetFramework="net461" />
   <package id="System.Reflection" version="4.3.0" targetFramework="net461" />
   <package id="System.Reflection.Extensions" version="4.3.0" targetFramework="net461" />
   <package id="System.Reflection.Primitives" version="4.3.0" targetFramework="net461" />
   <package id="System.Resources.ResourceManager" version="4.3.0" targetFramework="net461" />
   <package id="System.Runtime" version="4.3.1" targetFramework="net461" />
-  <package id="System.Runtime.CompilerServices.Unsafe" version="5.0.0-rc.2.20475.5" targetFramework="net461" />
+  <package id="System.Runtime.CompilerServices.Unsafe" version="5.0.0" targetFramework="net461" />
   <package id="System.Runtime.Extensions" version="4.3.1" targetFramework="net461" />
   <package id="System.Runtime.Handles" version="4.3.0" targetFramework="net461" />
   <package id="System.Runtime.InteropServices" version="4.3.0" targetFramework="net461" />
