Make json parser configurable

--- a/Last.fm-Scrubbler-WPF/App.config
+++ b/Last.fm-Scrubbler-WPF/App.config
@@ -61,6 +61,24 @@
       <setting name="UseRichPresenceITunes" serializeAs="String">
         <value>True</value>
       </setting>
+      <setting name="JSONTrackNameProperty" serializeAs="String">
+        <value>trackName</value>
+      </setting>
+      <setting name="JSONArtistNameProperty" serializeAs="String">
+        <value>artistName</value>
+      </setting>
+      <setting name="JSONAlbumNameProperty" serializeAs="String">
+        <value>albumName</value>
+      </setting>
+      <setting name="JSONAlbumArtistNameProperty" serializeAs="String">
+        <value>albumArtist</value>
+      </setting>
+      <setting name="JSONTimestampProperty" serializeAs="String">
+        <value>time</value>
+      </setting>
+      <setting name="JSONDurationProperty" serializeAs="String">
+        <value>duration</value>
+      </setting>
     </Scrubbler.Properties.Settings>
   </userSettings>
   <system.net>
