--- a/Last.fm-Scrubbler-WPF/Properties/Settings.settings
+++ b/Last.fm-Scrubbler-WPF/Properties/Settings.settings
@@ -53,5 +53,23 @@
     <Setting Name="UseRichPresenceITunes" Type="System.Boolean" Scope="User">
       <Value Profile="(Default)">True</Value>
     </Setting>
+    <Setting Name="JSONTrackNameProperty" Type="System.String" Scope="User">
+      <Value Profile="(Default)">trackName</Value>
+    </Setting>
+    <Setting Name="JSONArtistNameProperty" Type="System.String" Scope="User">
+      <Value Profile="(Default)">artistName</Value>
+    </Setting>
+    <Setting Name="JSONAlbumNameProperty" Type="System.String" Scope="User">
+      <Value Profile="(Default)">albumName</Value>
+    </Setting>
+    <Setting Name="JSONAlbumArtistNameProperty" Type="System.String" Scope="User">
+      <Value Profile="(Default)">albumArtist</Value>
+    </Setting>
+    <Setting Name="JSONTimestampProperty" Type="System.String" Scope="User">
+      <Value Profile="(Default)">time</Value>
+    </Setting>
+    <Setting Name="JSONDurationProperty" Type="System.String" Scope="User">
+      <Value Profile="(Default)">duration</Value>
+    </Setting>
   </Settings>
 </SettingsFile>
