--- a/Last.fm-Scrubbler-WPF-Test/packages.config
+++ b/Last.fm-Scrubbler-WPF-Test/packages.config
@@ -14,9 +14,9 @@
   <package id="NUnit" version="3.12.0" targetFramework="net461" />
   <package id="NUnitLite" version="3.12.0" targetFramework="net461" />
   <package id="Octokit" version="0.48.0" targetFramework="net461" />
-  <package id="OpenCover" version="4.7.922" targetFramework="net461" />
+  <package id="OpenCover" version="4.7.1113-rc" targetFramework="net461" />
   <package id="RateLimiter" version="2.2.0" targetFramework="net461" />
-  <package id="RestSharp" version="106.11.8-alpha.0.11" targetFramework="net461" />
+  <package id="RestSharp" version="106.11.8-alpha.0.12" targetFramework="net461" />
   <package id="RestSharpHelper" version="1.1.1" targetFramework="net461" />
   <package id="System.AppContext" version="4.3.0" targetFramework="net461" />
   <package id="System.Buffers" version="4.5.1" targetFramework="net461" />
