--- a/Last.fm-Scrubbler-WPF-Test/packages.config
+++ b/Last.fm-Scrubbler-WPF-Test/packages.config
@@ -8,11 +8,11 @@
   <package id="Inflatable.Lastfm" version="1.2.0" targetFramework="net461" />
   <package id="Microsoft.NETCore.Platforms" version="5.0.0" targetFramework="net461" />
   <package id="Microsoft.Win32.Primitives" version="4.3.0" targetFramework="net461" />
-  <package id="Moq" version="4.15.2" targetFramework="net461" />
+  <package id="Moq" version="4.16.0" targetFramework="net461" />
   <package id="NETStandard.Library" version="2.0.3" targetFramework="net461" />
-  <package id="Newtonsoft.Json" version="12.0.3" targetFramework="net461" />
-  <package id="NUnit" version="3.13.0" targetFramework="net461" />
-  <package id="NUnitLite" version="3.13.0" targetFramework="net461" />
+  <package id="Newtonsoft.Json" version="13.0.1-beta1" targetFramework="net461" />
+  <package id="NUnit" version="3.13.1" targetFramework="net461" />
+  <package id="NUnitLite" version="3.13.1" targetFramework="net461" />
   <package id="Octokit" version="0.48.0" targetFramework="net461" />
   <package id="OpenCover" version="4.7.1138-rc" targetFramework="net461" />
   <package id="RateLimiter" version="2.2.0" targetFramework="net461" />
