--- a/Last.fm-Scrubbler-WPF/packages.config
+++ b/Last.fm-Scrubbler-WPF/packages.config
@@ -4,7 +4,7 @@
   <package id="Caliburn.Micro.Core" version="4.0.0-alpha.1" targetFramework="net461" />
   <package id="ComposableAsync.Core" version="1.3.0" targetFramework="net461" />
   <package id="DiscogsClient" version="2.7.1" targetFramework="net461" />
-  <package id="DiscordRichPresence" version="1.0.169" targetFramework="net461" />
+  <package id="DiscordRichPresence" version="1.0.175" targetFramework="net461" />
   <package id="Extended.Wpf.Toolkit" version="4.0.2" targetFramework="net461" />
   <package id="Hardcodet.NotifyIcon.Wpf" version="1.0.8" targetFramework="net461" />
   <package id="Inflatable.Lastfm" version="1.2.0" targetFramework="net461" />
@@ -14,7 +14,7 @@
   <package id="Microsoft.Win32.Primitives" version="4.3.0" targetFramework="net461" />
   <package id="Microsoft.Xaml.Behaviors.Wpf" version="1.1.31" targetFramework="net461" />
   <package id="NETStandard.Library" version="2.0.3" targetFramework="net461" />
-  <package id="Newtonsoft.Json" version="12.0.3" targetFramework="net461" />
+  <package id="Newtonsoft.Json" version="13.0.1-beta1" targetFramework="net461" />
   <package id="Octokit" version="0.48.0" targetFramework="net461" />
   <package id="RateLimiter" version="2.2.0" targetFramework="net461" />
   <package id="RestSharp" version="106.11.8-alpha.0.12" targetFramework="net461" />
