--- a/Last.fm-Scrubbler-WPF/packages.config
+++ b/Last.fm-Scrubbler-WPF/packages.config
@@ -10,14 +10,14 @@
   <package id="Inflatable.Lastfm" version="1.2.0" targetFramework="net461" />
   <package id="Inflatable.Lastfm.SQLite" version="1.1.999-prerelease" targetFramework="net461" />
   <package id="Microsoft.Net.Http" version="2.2.29" targetFramework="net461" />
-  <package id="Microsoft.NETCore.Platforms" version="6.0.0-preview.4.21253.7" targetFramework="net461" />
+  <package id="Microsoft.NETCore.Platforms" version="6.0.0-preview.6.21352.12" targetFramework="net461" />
   <package id="Microsoft.Win32.Primitives" version="4.3.0" targetFramework="net461" />
   <package id="Microsoft.Xaml.Behaviors.Wpf" version="1.1.31" targetFramework="net461" />
   <package id="NETStandard.Library" version="2.0.3" targetFramework="net461" />
   <package id="Newtonsoft.Json" version="13.0.1" targetFramework="net461" />
   <package id="Octokit" version="0.50.0" targetFramework="net461" />
   <package id="RateLimiter" version="2.2.0" targetFramework="net461" />
-  <package id="RestSharp" version="106.11.8-alpha.0.14" targetFramework="net461" />
+  <package id="RestSharp" version="106.12.0" targetFramework="net461" />
   <package id="RestSharpHelper" version="1.1.1" targetFramework="net461" />
   <package id="SpotifyAPI-NET" version="2.19.0" targetFramework="net461" />
   <package id="sqlite-net-pcl" version="1.4.118" targetFramework="net461" />
@@ -54,7 +54,7 @@
   <package id="System.Reflection.Primitives" version="4.3.0" targetFramework="net461" />
   <package id="System.Resources.ResourceManager" version="4.3.0" targetFramework="net461" />
   <package id="System.Runtime" version="4.3.1" targetFramework="net461" />
-  <package id="System.Runtime.CompilerServices.Unsafe" version="6.0.0-preview.4.21253.7" targetFramework="net461" />
+  <package id="System.Runtime.CompilerServices.Unsafe" version="6.0.0-preview.6.21352.12" targetFramework="net461" />
   <package id="System.Runtime.Extensions" version="4.3.1" targetFramework="net461" />
   <package id="System.Runtime.Handles" version="4.3.0" targetFramework="net461" />
   <package id="System.Runtime.InteropServices" version="4.3.0" targetFramework="net461" />
